# llms-and-agents-project

./: .env  .env.dist  .gitignore  README.md  cli.py  eval.py  pyproject.toml  requirements.txt  run_result.json
data/human_eval/: popqa_correct_popqa_1425603.md  popqa_rejected_popqa_2542979.md  popqa_wrong_popqa_1552926.md  simpleqa_correct_simpleqa_2851.md  simpleqa_rejected_simpleqa_4105.md  simpleqa_wrong_simpleqa_2210.md  triviaqa_correct_triviaqa_odql_3275.md  triviaqa_rejected_triviaqa_bt_1978.md
docs/: agentic_rag_pipeline_flow.md
docs/superpowers/plans/: 2025-05-01-parallel-question-tui-plan.md
run/: __init__.py  aggregate.py  cli.py  eval.py  score.py  summary_popqa.csv  summary_simpleqa.csv  summary_triviaqa.csv
scripts/: Human_Eval_Corr.py  create_evaluation_flow_pdf.py  download_benchmarks.py  jsonl_judges_to_md.py  sample_benchmarks.py  setup_folder_structure.sh
src/: config.py  logging_config.py  models.py  orchestrator.py  performance.py
src/agents/: answer_writer.py  critic.py  evidence_filter.py  evidence_sufficiency.py  hyde.py  query_planner.py  researcher.py
src/evaluation/: __init__.py  judge.py  paths.py  ragas_metrics.py  runner.py
src/llm/: __init__.py  groq_client.py  openrouter_client.py
src/retrieval/: chunking.py  dense.py  hybrid.py  rerank.py  sparse.py  web_search.py
src/tui/: cli.py  dashboard.py  events.py  orchestrator.py  state.py  token_tracker.py
src/utils/: parsing.py  text.py
tests/tui/: test_cli.py  test_dashboard.py  test_events.py  test_orchestrator.py  test_state.py  test_token_tracker.py
(+13 files in other folders)
