[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llms-and-agents-project"
version = "0.1.0"
description = "Research project for LLM agents and retrieval systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openrouter>=0.1.0",
    "langchain-core>=0.3.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "tavily-python>=0.5.0",
    "requests>=2.32.0",
    "numpy>=1.26.4",
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.8.0.post1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
rag-cli = "run.cli:main"
rag-tui = "src.tui.cli:main"
rag-bench = "run.eval:main"
rag-score = "run.score:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "run"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true